<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fotografia"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:contentDescription="@string/content_description_media"
                android:scaleType="centerCrop"
                android:src="@drawable/cap1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fotografia">

                <TextView
                    android:id="@+id/tvLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Titulo"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?colorSecondaryFixedDim"
                    tools:text="Es un parque muy bonito" />

                <TextView
                    android:id="@+id/tvNota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="Es un parque muy bonito" />

                <LinearLayout
                    android:id="@+id/lOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnShared"
                        style="@style/Widget.Material3.Button.IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/shared"
                        app:icon="@drawable/ic_share_24dp"
                        tools:ignore="TouchTargetSizeCheck"
                        android:layout_marginEnd="5dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEdit"
                        style="@style/Widget.Material3.Button.IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/editar"
                        app:icon="@drawable/ic_edit_24dp"
                        tools:ignore="TouchTargetSizeCheck"
                        android:layout_marginEnd="5dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDelete"
                        style="@style/Widget.Material3.Button.IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/eliminar"
                        app:icon="@drawable/ic_delete_24dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>